--- a/index.html
+++ b/index.html
@@ -26,8 +26,29 @@ article p {
   line-height: 1.5;      /* more relaxed spacing between lines */
    margin-bottom: 12px;
 }
-    .read-more { font-size:.85rem; font-weight:700; color:#0b3ea9; text-decoration:none; }
-    main > article { height:calc((100% - (5 * 10px)) / 6); }
+   .read-more {
+  font-size: .85rem;
+  font-weight: 700;
+  color: #0b3ea9;
+  text-decoration: none;
+}
+
+main > article {
+  height: calc((100% - (5 * 10px)) / 6);
+}
+
+/* allow vertical scroll on mobile and prevent cutoff */
+html, body {
+  min-height: 100%;
+  overflow-x: hidden;
+  overflow-y: auto;
+  -webkit-overflow-scrolling: touch;
+}
+
+main {
+  height: auto;                     /* allow natural height */
+  min-height: calc(100dvh - 60px);  /* modern viewport fix for mobile */
+}
   </style>
 </head>
 <body>
