--- a/news1.html
+++ b/news1.html
@@ -34,7 +34,7 @@
   </p>
 
   <p>
-    Days before these remarks, the Department of Energy published its own climate report, arguing that concern over the climate crisis has been exaggerated. The document characterised previous assessments as overstated and emphasised a more restrained view of climate-related risks.
+    Days before these remarks, the Department of Energy published its own climate report, arguing that concern over the climate crisis has been exaggerated. The document characterised previous assessments as exaggerated and emphasised a more restrained view of climate-related risks.
   </p>
 
   <p>
@@ -82,6 +82,11 @@
   });
 })();
 </script>
-
+<script>
+  window.onload = function() {
+    window.scrollTo(0, 0);
+  };
+</script>
+    
 </body>
 </html>
