--- a/news11.html
+++ b/news11.html
@@ -38,7 +38,7 @@
   </p>
 
   <p>
-    Experts emphasize that step counts include all daily activity, not just structured exercise. Walking at home, in the office, or outdoors all contributes, making the goal achievable without gyms or equipment.
+    Experts emphasise that step counts include all daily activity, not just structured exercise. Walking at home, in the office, or outdoors all contribute, making the goal achievable without gyms or equipment.
   </p>
 
   <p>
