--- a/news3.html
+++ b/news3.html
@@ -18,6 +18,11 @@
     a:hover { text-decoration:underline; }
     .meta { color:#6b7280; font-size:.95rem; margin:.25rem 0 1rem; }
   </style>
+   <script>
+    // article pages only
+    if ('scrollRestoration' in history) history.scrollRestoration = 'manual';
+    window.addEventListener('load', () => window.scrollTo(0, 0));
+  </script>
 </head>
 <body>
   <header>
@@ -33,7 +38,7 @@
   </p>
 
   <p>
-    For decades, campaigners warned that Pacific islands like Tuvalu were sinking. But research indicates most atolls are expanding, with land area increasing as coral sand builds faster than erosion.
+    For decades, campaigners warned that Pacific islands like Tuvalu were sinking. But research indicates most coral islands are expanding, with land area increasing as coral sand builds faster than erosion.
   </p>
 
   <p>
