--- a/news4.html
+++ b/news4.html
@@ -18,30 +18,35 @@
     a:hover { text-decoration:underline; }
     .meta { color:#6b7280; font-size:.95rem; margin:.25rem 0 1rem; }
   </style>
+  <script>
+    // article pages only
+    if ('scrollRestoration' in history) history.scrollRestoration = 'manual';
+    window.addEventListener('load', () => window.scrollTo(0, 0));
+  </script>
 </head>
 <body>
   <header>
     <h1>Three Years Left to Limit Global Warming</h1>
   </header>
   <main>
-     <p>
-    More than 60 leading scientists warn the world could breach the 1.5°C warming limit within three years if carbon dioxide emissions remain at current levels.
+   <p>
+    More than 60 leading scientists warn that the world could exceed the 1.5°C global warming limit within the next three years if carbon dioxide emissions continue at today’s pace.
   </p>
 
   <p>
-    In 2020, the remaining “carbon budget” for a 50% chance of staying below 1.5°C was estimated at 500 billion tonnes of CO₂. By early 2025, this had fallen to 130 billion tonnes due to sustained emissions and refined calculations. At current levels of about 40 billion tonnes a year, the budget could be exhausted in roughly three years, though the threshold would likely be crossed later.
+    In 2020, scientists estimated that the world could emit about 500 billion tonnes more carbon dioxide and still have a 50% chance of staying below 1.5°C. By early 2025, that “carbon budget” had shrunk to just 130 billion tonnes because emissions had accelerated. With the world releasing around 40 billion tonnes each year, this budget could run out in about three years.
   </p>
 
   <p>
-    Last year marked the first time global temperatures stayed above 1.5°C for 12 consecutive months, largely due to human-driven warming. The current rate, 0.27°C per decade, is far faster than anything in geological history.
+    Last year was the first time global temperatures stayed above 1.5°C for an entire year, mainly due to human-driven warming. The current rate of temperature rise, about 0.27°C per decade, is faster than anything seen in Earth’s history.
   </p>
 
   <p>
-    Around 90% of excess heat is absorbed by oceans, disrupting ecosystems and accelerating sea-level rise, which has doubled since the 1990s. Scientists caution against relying on future CO₂ removal technologies to reverse warming, warning they may not fully offset the damage.
+    About 90% of the extra heat is absorbed by the oceans, harming marine life and speeding up sea-level rise, which has doubled since the 1990s.
   </p>
 
   <p>
-    Experts stress rapid, stringent emissions cuts are essential, noting that every fraction of avoided warming reduces harm, from extreme weather to rising seas.
+    Scientists say the world cannot rely on future carbon removal technologies to fix the problem. Rapid and deep emission cuts are needed now, as every fraction of a degree avoided will reduce future harm.
   </p>
     <p><a href="index.html">← Back to Home</a></p>
   </main>
