--- a/news6.html
+++ b/news6.html
@@ -18,6 +18,11 @@
     a:hover { text-decoration:underline; }
     .meta { color:#6b7280; font-size:.95rem; margin:.25rem 0 1rem; }
   </style>
+   <script>
+    // article pages only
+    if ('scrollRestoration' in history) history.scrollRestoration = 'manual';
+    window.addEventListener('load', () => window.scrollTo(0, 0));
+  </script>
 </head>
 <body>
   <header>
@@ -29,7 +34,7 @@
   </p>
 
   <p>
-    Glaciers may not survive this century without urgent action. Their melting risks catastrophic floods and the release of dormant microbes. While many are harmless, some could pose health threats. Documenting and preserving these microorganisms is crucial, offering insights into evolution, potential medical therapies, and biotechnologies.
+    Glaciers may not survive this century without urgent action. Their melting risks catastrophic floods and the reactivation of sleeping bacteria. While many are harmless, some could pose health threats. Documenting and preserving these microorganisms is crucial, offering insights into evolution, potential medical therapies, and biotechnologies.
   </p>
 
   <p>
