--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
   padding: 0;
   overflow-y: auto;
   -webkit-overflow-scrolling: touch;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Arial, sans-serif;
+  color: var(--text);
+  background: var(--bg);
 }
 
     header { background: var(--blue); color:#fff; padding:10px 20px; }
