--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
     /* Optional: fixed card height if you truly want 6 equal rows */
     /* main > article { height: calc((100% - (5 * 10px)) / 6); } */
   </style>
+  <script>
+  if ('scrollRestoration' in history) history.scrollRestoration = 'auto';
+  </script>
   
 </head>
 
