--- a/news6.html
+++ b/news6.html
@@ -29,24 +29,24 @@
     <h1>Emerging Climate Threats Put Humanity at Risk</h1>
   </header>
   <main>
-    <p>
-    From ancient microbes awakening in melting glaciers to toxic pollutants released by floods, environmental dangers are no longer distant or theoretical; they are here and growing. Scientists highlight four urgent areas where environmental degradation intersects with human vulnerability: melting glacier microbes, legacy pollutants, undamming rivers, and climate risks for ageing populations.
+  <p>
+    From ancient microbes awakening in melting glaciers to toxic chemicals released by floods, environmental dangers are no longer distant threats. They are happening now and getting worse. Scientists have identified four urgent areas where environmental damage directly affects humans: melting glacier microbes, hidden pollutants, blocked rivers, and climate risks for older populations.
   </p>
 
   <p>
-    Glaciers may not survive this century without urgent action. Their melting risks catastrophic floods and the reactivation of sleeping bacteria. While many are harmless, some could pose health threats. Documenting and preserving these microorganisms is crucial, offering insights into evolution, potential medical therapies, and biotechnologies.
+    Glaciers around the world are shrinking fast and could disappear this century without urgent action. Their meltwater can cause severe floods and release long-frozen bacterias. Most of these microbes are harmless, but some could pose health risks. 
   </p>
 
   <p>
-    Flooding increasingly stirs up hidden pollutants stored in soil, releasing heavy metals and chemicals that threaten ecosystems and health. Nature-based flood protection and sediment remediation are seen as vital solutions.
+    Flooding is uncovering another hidden danger as pollutants trapped in soil for decades are released. When floods hit, toxic materials such as heavy metals and industrial chemicals can leak into rivers and farmland. Restoring natural wetlands and cleaning up contaminated soil are crucial to reduce these risks.
   </p>
 
   <p>
-    Rivers are also under pressure, with drought and barriers reducing water access and disrupting ecosystems. Removing dams and restoring waterways can allow rapid recovery, though climate stressors must be tackled in parallel.
+    Rivers are also suffering from drought and man-made dams, which block water flow and harm wildlife. Removing some dams and restoring rivers can bring ecosystems back to life, but this must happen alongside broader climate action.
   </p>
 
   <p>
-    Meanwhile, older populations are disproportionately at risk from extreme weather, heat, and pollution. As their numbers grow, effective adaptation strategies will be essential to protect them from worsening climate impacts.
+    Older adults are especially vulnerable to extreme heat, pollution, and disasters. As the global population ages, better protection and adaptation plans will be crucial to keep communities safe.
   </p>
     <p><a href="index.html">← Back to Home</a></p>
   </main>
