--- a/news5.html
+++ b/news5.html
@@ -29,24 +29,24 @@
     <h1>Scientist Warns of New Heat Records Ahead</h1>
   </header>
   <main>
-     <p>
-    There is an 80% chance that global temperatures will break at least one annual heat record within the next five years, raising risks of extreme droughts, floods, and wildfires.
+  <p>
+    There is an 80% chance global temperatures will break at least one annual heat record in the next five years, raising risks of extreme droughts, floods, and wildfires that threaten lives and homes.
   </p>
 
   <p>
-    For the first time, data also suggest a small likelihood—about 1%—that before 2030 the world could experience a year 2°C hotter than preindustrial levels, a scenario once thought impossible in such a short timeframe.
+    For the first time, data also suggest a small chance, about 1%, that before 2030 the world could see a year 2°C hotter than preindustrial levels, a milestone once considered far off.
   </p>
 
   <p>
-    The latest update highlights intensifying threats to health, economies, and ecosystems unless dependence on coal, oil, gas, and deforestation is curbed. It projects a 70% chance that average warming between 2025 and 2029 will exceed 1.5°C, bringing the planet close to breaching widely accepted climate thresholds.
+    The latest update warns of growing risks to health, economies, and nature unless we rapidly cut coal, oil, gas, and deforestation. It projects a 70% chance that average temperatures from 2025 to 2029 will be over 1.5°C above preindustrial levels, breaking the widely accepted climate limit.
   </p>
 
   <p>
-    The probability of surpassing 1.5°C in at least one of the next five years is estimated at 86%, up from 40% just a few years ago. Last year, the threshold was breached on an annual basis for the first time, marking the hottest year in the observational record.
+    The odds of exceeding 1.5°C in at least one of the next five years have risen to 86%, up from 40% a few years ago. Last year was the hottest on record, showing how quickly conditions are changing.
   </p>
 
   <p>
-    Arctic winters are predicted to warm more than three times faster than the global average, while other regions face worsening droughts or heavier rainfall. Scientists stress urgent emission cuts, warning that 1.5°C is not inevitable.
+    Arctic winters are also predicted to warm more than three times faster than the global average, while many regions face worsening droughts or heavier rainfall. Scientists stress that urgent emission cuts are needed now to avoid more dangerous warming and reduce future harm.
   </p>
     <p><a href="index.html">← Back to Home</a></p>
   </main>
